# keep-a-changelog-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: changelog.rs  changes.rs  consts.rs  lib.rs  link.rs  parser.rs  release.rs  token.rs
tests/data/: basic_changelog.md  default_changelog_compact.md  default_changelog_with_unreleased_compact.md  early_changelog.md  early_changelog_compact.md  early_changelog_multiple_sections.md  early_changelog_multiple_sections_compact.md  git_cliff_changelog.md  initial_changelog_unreleased.md  initial_changelog_unreleased_compact.md
