[package]
name = "keep-a-changelog"
version = "0.1.4"
authors = ["Semen Loktionov <loktionov.kh@gmail.com>"]
license = "MIT"
edition = "2021"

description = "Rust library for generating and manipulating CHANGELOG.md files that use the Keep A Changelog format."
readme = "README.md"
documentation = "https://docs.rs/keep-a-changelog"

repository = "https://github.com/napalmpapalam/keep-a-changelog-rs"
keywords = ["keep-a-changelog", "changelog"]
categories = ["development-tools", "text-processing"]

[dependencies]
eyre = "0.6"
derive_builder = "0.20"
derive-getters = "0.3"
chrono = "0.4"
regex = "1"
semver = "1"
derive_setters = "0.1.6"
log = "0.4.21"

[dev-dependencies]
log4rs_test_utils = "0.2.3"
rstest = "0.19.0"
uuid = { version = "1.8.0", features = ["v4"] }
